--- a/retroactive-backend/package.json
+++ b/retroactive-backend/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "pg": "^8.11.5"
+    "morgan": "^1.10.0",
+    "pg": "^8.11.5",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
