--- a/retroactive-frontend/package.json
+++ b/retroactive-frontend/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "modal": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6"
