--- a/retroactive-backend/package.json
+++ b/retroactive-backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.5",
+    "react-modal": "^3.16.1",
     "winston": "^3.13.0"
   },
   "devDependencies": {
