--- a/retroactive-frontend/package.json
+++ b/retroactive-frontend/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "modal": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
